--- a/forCodinginterviews/forCodinginterviews.csproj
+++ b/forCodinginterviews/forCodinginterviews.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="LeetCode\Blind75 C#\" />
+    <Compile Remove="LeetCode\**" />
+    <EmbeddedResource Remove="LeetCode\**" />
+    <None Remove="LeetCode\**" />
   </ItemGroup>
 
 </Project>
